--- a/media.css
+++ b/media.css
@@ -1,5 +1,10 @@
 
-
+@media screen and (max-width:1250px){
+    .maindiv{
+        left:400px;
+        
+    }
+}
 @media screen and (max-width:1000px){
     .maindiv{
         top:150px;
